<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_LoggingNode" Id="{be04b94b-cb01-4e79-b42e-3a15c4d4b57e}">
    <Declaration><![CDATA[TYPE ST_LoggingNode :
STRUCT
	pLogger : POINTER TO I_Logging;
	pNext   : POINTER TO St_LoggingNode;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>